--- a/index.html
+++ b/index.html
@@ -16,8 +16,23 @@
 </head>
 
 <body id="color">
+    <!-- single card -->
+
+    <div id="meal-details" class="card mx-auto mt-5" style="width: 200px;">
+        <!-- <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div> -->
+    </div>
+
+
+
     <!-- text -->
     <h1 class="text-center mt-3 text-success">Can you see your favorite food please !!!</h1>
+
 
     <!-- search button and input -->
     <div class="input-group mb-3 w-50 mx-auto mt-3">
@@ -38,6 +53,7 @@
             </div>
         </div> -->
     </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
